--- a/languages.toml
+++ b/languages.toml
@@ -1,12 +1,23 @@
 [[language]]
 name = "cpp"
 auto-format = true
-formatter = { command = "clang-formatter", args = ["-style=Google"]}
+formatter = { command = "clang-formatter", args = ["-style={BasedOnStyle:Google"]}
 language-servers = ["clangd"]
-
 
 [[language]]
 name = "python"
 auto-format = true
-formatter = { command = "black"}
+formatter = { command = "sh", args = ["-c", "black --quiet --line-length 88 - | isort -"]}
 language-servers = ["pyright"]
+
+[language-server.sql-language-server]
+command = "sql-language-server"
+args = ["up", "--method", "stdio"]
+
+[[language]]
+name = "sql"
+language-servers = [ "sql-language-server" ]
+
+[[language]]
+name = "toml"
+formatter = { command = "taplo", args = ["fmt", "-"] }
